Changes in version 1.6

 - Added ColorMask support to selectively disable color planes on rendering.

 - Added support for all available depth test functions.

 - Add an outNode to getCollisionPoint() that returns the scene node that was hit, as well as the triangle.

 - Initial support for Alpha To Coverage, needs some more fixing until it works on all supported platforms.

 - Added support for Anti-Aliasing modes per material

 - Added an ICollisionCallback to ISceneNodeAnimatorCollisionResponse, to inform the application that a collision has occured.  Thanks to garrittg for this.

 - Added an startPosition parameter to createFlyCircleAnimator() to allow starting the animator at any position on the circle.

 - Many uses of dimension2d<s32> changed to dimension2d<u32>, including IImage, ITexture and screen dimensions.  You will have to change (at least) createDevice() calls to use dimension2d<u32>

 - Added Doublebuffer flag to SIrrCreationParameters, for better finetuning

 - Added Stereo-Framebuffer support for professional OpenGL cards

 - Added IFileSystem::createMemoryWriteFile() to allow creation of an IWriteFile interface that uses an application supplied memory buffer.

 - Added an IVideoDriver::writeImageToFile() overload that can take an IWriteFile interface.

 - (Internal) Replaced CMemoryReadFile with CMemoryFile, that also implements an IWriteFile interface.

 - Added an optional light manager to the scene manager to allow the user application to turn lights on and off during scene rendering.  This can be used to produce "zoned" lighting. See example 20.ManagedLights.

 - Added a method to flip the Y movement of the FPS camera.

 - The Anisotropy filter can now be set to the AF value per texture layer. So no forced MAX_ANISOTROPY anymore. .irr files will probably fail, though.

 - AntiAlias parameter in SIrrCreationParameters is now an u8 value specifying the multisampling level (0 for disabled, 4,6,8, and others for anti-aliasing)
